clusters/sirius/apps/qbittorrent/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: torrent-tcp
          containerPort: 6881
          protocol: TCP
        - name: torrent-udp
          containerPort: 6881
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
        - name: data
          mountPath: /downloads
        - name: qbittorrent-config-file
          mountPath: /config/qBittorrent/config/qBittorrent.conf
          subPath: qBittorrent.conf
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
      volumes:
      - name: config
        hostPath:
          path: /mnt/secondary/config/qbittorrent
          type: DirectoryOrCreate
      - name: data
        hostPath:
          path: /mnt/secondary/downloads
          type: DirectoryOrCreate
      - name: qbittorrent-config-file
        configMap:
          name: qbittorrent-config
