clusters/sirius/apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: torrent-tcp
      port: 6881
      targetPort: torrent-tcp
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: torrent-udp
      protocol: UDP
  selector:
    app: qbittorrent
